--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+  			<groupId>com.google.code.gson</groupId>
+  			<artifactId>gson</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-docker-compose</artifactId>
 			<scope>runtime</scope>
