--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.docker.compose.enabled=false
+spring.session.jdbc.table-name=SPRING_SESSION
+
 
 
 #config spring security
@@ -24,7 +26,7 @@ spring.servlet.multipart.max-request-size=50MB
 
 #config session
 spring.session.store-type=jdbc
-spring.session.timeout=30m
+server.servlet.session.timeout=30m
 spring.session.jdbc.initialize-schema=always
 #server.servlet.session.timeout
 #spring.session.jdbc.table-name=SPRING_SESSION
