--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,12 @@ spring.session.jdbc.initialize-schema=always
 
 #kích hoạt màu sắc trong log
 spring.output.ansi.enabled=always
+
+
+#thông tin momo
+momo.accessKey=F8BBA842ECF85
+momo.secretKey=K951B6PE1waDMi640xX08PD3vg6EkVlz
+momo.partnerCode=MOMO
+momo.redirectUrl=http://localhost:8080/thanks
+momo.ipnUrl=https://webhook.site/b3088a6a-2d17-4f8d-a383-71389a6c600b
+momo.requestType=payWithMethod
