--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>com.turkraft</groupId>
+		    <artifactId>spring-filter</artifactId>
+		    <version>2.1.3</version>
+		</dependency>
+
+		
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-docker-compose</artifactId>
 			<scope>runtime</scope>
