--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,4 @@ momo.requestType=payWithMethod
 
 
 # Thay bằng khóa API thật của bạn từ https://platform.openai.com/account/api-keys
-openai.api.key=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
+# openai.api.key=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
