--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,16 @@ momo.requestType=payWithMethod
 
 
 # Thay bằng khóa API thật của bạn từ https://platform.openai.com/account/api-keys
-# openai.api.key=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
+openai.api.key=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
+
+#config email with gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+
+#thay email cua ban vao day
+spring.mail.username=dungakaishi900@gmail.com
+
+#thay password cua ban vao day
+spring.mail.password=cymyrluapcqsikjm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
