login-google-25/7/2025-7h30PM

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,3 +58,9 @@ spring.mail.username=dungakaishi900@gmail.com
 spring.mail.password=cymyrluapcqsikjm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#config oauth2
+spring.security.oauth2.client.registration.google.client-id=754326589377-mdkags7d619mi4ojb31tu5bi6g9a8pcj.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
