--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
 		</dependency>
 
 		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-oauth2-client</artifactId>
+	    </dependency>
+
+		<dependency>
 		    <groupId>com.sun.mail</groupId>
 		    <artifactId>jakarta.mail</artifactId>
 		    <version>2.0.1</version>
