--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,7 @@ momo.redirectUrl=http://localhost:8080/thanks
 momo.ipnUrl=https://webhook.site/b3088a6a-2d17-4f8d-a383-71389a6c600b
 momo.requestType=payWithMethod
 
+dung.upload-file.base-uri=file:///D:/DU_LIEU_HOC_IT/CAC_MON_HCMUE_HK2/Nhap_mon_cong_nghe_phan_mem/exam-portal/exam-portal/uploads/
 
 # Thay bằng khóa API thật của bạn từ https://platform.openai.com/account/api-keys
 openai.api.key=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
