--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.session.jdbc.table-name=SPRING_SESSION
 # spring.mvc.view.prefix=/WEB-INF/view/
 # spring.mvc.view.suffix=.jsp
 
+spring.web.resources.add-mappings=false
+
 
 #default = 1MB
 spring.servlet.multipart.max-file-size=50MB
