--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,8 +47,8 @@ momo.requestType=payWithMethod
 
 dung.upload-file.base-uri=file:///D:/DU_LIEU_HOC_IT/CAC_MON_HCMUE_HK2/Nhap_mon_cong_nghe_phan_mem/exam-portal/exam-portal/uploads/
 
-# Thay bằng khóa API thật của bạn từ https://platform.openai.com/account/api-keys
-openai.api.key=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
+# Thay bằng khóa API thật của bạn từ https://aistudio.google.com/apikey
+gemini.api.key=AIzaSyCCOf1MZxLBKZDmI0EI6JVqRX9HEK7EvMU
 
 #config email with gmail
 spring.mail.host=smtp.gmail.com
