--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,32 @@
+# spring.application.name=exam-portal
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/onlineexam
+# spring.datasource.username=root
+# spring.datasource.password=123456
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.show-sql: true
+# spring.docker.compose.enabled=false
+# spring.session.jdbc.table-name=SPRING_SESSION
+
+#      kết nối với postgres
 spring.application.name=exam-portal
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/onlineexam
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require
+spring.datasource.username=postgres.otcppuzejoxyxozcqmiu
+spring.datasource.password=moca@123
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql: true
 spring.docker.compose.enabled=false
 spring.session.jdbc.table-name=SPRING_SESSION
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=none
 
+#########################################
+
+spring.url.fe=https://react-exam-cnpm.vercel.app
 
 #config spring security
 # spring.security.user.name=hoidanit
@@ -26,12 +44,14 @@ spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
 spring.servlet.multipart.max-request-size=50MB
 
-#config session
+# #config session
 spring.session.store-type=jdbc
+
 server.servlet.session.timeout=30m
-spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.initialize-schema=never
+
 #server.servlet.session.timeout
-#spring.session.jdbc.table-name=SPRING_SESSION
+# spring.session.jdbc.table-name=SPRING_SESSION
 
 #kích hoạt màu sắc trong log
 spring.output.ansi.enabled=always
@@ -67,3 +87,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.security.oauth2.client.registration.google.client-id=754326589377-mdkags7d619mi4ojb31tu5bi6g9a8pcj.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
+
+#kết nối với postgres
+# Hibernate không dùng JDBC metadata
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+########################
