--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,8 @@ server.servlet.session.cookie.same-site=none
 #########################################
 
 spring.url.fe=https://react-exam-cnpm.vercel.app
+spring.url.be=https://java-spring-mvc-exam.onrender.com/
+
 
 #config spring security
 # spring.security.user.name=hoidanit
