--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,36 @@
-# spring.application.name=exam-portal
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/onlineexam
-# spring.datasource.username=root
-# spring.datasource.password=123456
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# spring.jpa.show-sql: true
-# spring.docker.compose.enabled=false
-# spring.session.jdbc.table-name=SPRING_SESSION
-
-#      kết nối với postgres
 spring.application.name=exam-portal
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require
-spring.datasource.username=postgres.otcppuzejoxyxozcqmiu
-spring.datasource.password=moca@123
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/onlineexam
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 spring.docker.compose.enabled=false
 spring.session.jdbc.table-name=SPRING_SESSION
-spring.datasource.hikari.data-source-properties.prepareThreshold=0
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-server.servlet.session.cookie.secure=true
-server.servlet.session.cookie.same-site=none
+#      kết nối với postgres
+# spring.application.name=exam-portal
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:postgresql://aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?sslmode=require
+# spring.datasource.username=postgres.otcppuzejoxyxozcqmiu
+# spring.datasource.password=moca@123
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.show-sql: true
+# spring.docker.compose.enabled=false
+# spring.session.jdbc.table-name=SPRING_SESSION
+# spring.datasource.hikari.data-source-properties.prepareThreshold=0
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# server.servlet.session.cookie.secure=true
+# server.servlet.session.cookie.same-site=none
 
 #########################################
 
 
-spring.url.fe=https://react-exam-cnpm.vercel.app
-spring.url.be=https://java-spring-mvc-exam.onrender.com/
+# spring.url.fe=https://react-exam-cnpm.vercel.app
+# spring.url.be=https://java-spring-mvc-exam.onrender.com/
+spring.url.fe=http://localhost:3000
+spring.url.be=http://localhost:8080/
 
 
 #config spring security
@@ -93,5 +95,5 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 
 #kết nối với postgres
 # Hibernate không dùng JDBC metadata
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+# spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 ########################
