--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,7 @@ spring.servlet.multipart.max-request-size=50MB
 spring.session.store-type=jdbc
 
 server.servlet.session.timeout=30m
-spring.session.jdbc.initialize-schema=never
+spring.session.jdbc.initialize-schema=always
 
 #server.servlet.session.timeout
 # spring.session.jdbc.table-name=SPRING_SESSION
