--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,7 +47,13 @@ spring.web.resources.add-mappings=false
 #default = 1MB
 spring.servlet.multipart.max-file-size=50MB
 #default = 10 MB (form data)
-spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.max-request-size=200MB
+spring.servlet.multipart.file-size-threshold=2KB
+# Tăng giới hạn số lượng parts (mặc định = 1)
+server.tomcat.max-swallow-size=20MB
+server.tomcat.max-http-form-post-size=20MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
 
 # #config session
 spring.session.store-type=jdbc
