--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,9 @@ spring.url.be=http://localhost:8080/
 
 spring.web.resources.add-mappings=false
 
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.bind=TRACE
+
 
 #default = 1MB
 spring.servlet.multipart.max-file-size=50MB
